2008-06-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Projects.CodeGeneration/IRefactorer.cs,
	  MonoDevelop.Projects.CodeGeneration/BaseRefactorer.cs,
	  MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs,
	  MonoDevelop.Projects.CodeGeneration/RefactorOperations.cs: Add and
	  implement API for bulk adding/implementing members at one location.
	  Avoids reparsing the file after each individual addition, so
	  increases performance substantially, and allows members to be
	  created in contiguous blocks. Also implement APIs for creating
	  folding regions, and for creating/implementing members within them.
	  Implement interfaces in folding regions.

2008-06-20  Ankit Jain  <jankit@novell.com>

	* BaseRefactorer.cs (ImplementMember): Fix emitting 'override'.
	* MonoDevelop.Projects.CodeGeneration/CodeRefactorer.cs
	(FindOverridables): Move here from CSharpTextEditorExtension.

2008-06-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
	  MonoDevelop.Projects.Dom/ResolveResult.cs,
	  MonoDevelop.Projects.Dom/DomLocation.cs,
	  MonoDevelop.Projects.Dom/DomRegion.cs: Worked on code completion
	  infrastructure.

2008-06-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs: Worked on assembly
	  code completion database.

2008-06-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/DomPersistence.cs: Worked on dom
	  persistence.

2008-06-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Projects.Dom/DomType.cs,
	  MonoDevelop.Projects.Dom/DomTypeProxy.cs,
	  MonoDevelop.Projects.Dom/DomPersistence.cs,
	  MonoDevelop.Projects.Dom/CodeCompletionDatabase.cs,
	  MonoDevelop.Projects.Dom/IType.cs: Worked on dom.

2008-06-17  Michael Hutchinson <mhutchinson@novell.com> 
