@@ -1,3 +1,13 @@
+2008-06-24  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.Projects.Dom.Parser/ProjectParserService.cs,
+	  MonoDevelop.Projects.Dom.Parser/ProjectDom.cs,
+	  MonoDevelop.Projects.Dom/DomType.cs,
+	  MonoDevelop.Projects.Dom/AbstractMember.cs,
+	  MonoDevelop.Projects.Dom/IMember.cs,
+	  MonoDevelop.Projects.Dom/ExpressionResult.cs,
+	  MonoDevelop.Projects.Dom/DomPersistence.cs: Worked on dom.
+
 2008-06-20  Michael Hutchinson <mhutchinson@novell.com> 
 
 	* MonoDevelop.Projects.CodeGeneration/IRefactorer.cs,
